postgres-database.yaml
# Wdrażamy bazę jako Deployment i wystawiamy ją wewnątrz klastra przez Service typu ClusterIP
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-db
  namespace: kubeview
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-db
  template:
    metadata:
      labels:
        app: postgres-db
    spec:
      containers:
        - name: postgres
          image: postgres:16-alpine
          ports:
            - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service # <-- Pod tą nazwą baza jest widziana przez Spring Boota, k8s rejestruje nazwe w wew. DNS
  namespace: kubeview
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: postgres-db
