sample-springboot-2.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sample-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-boot-app-2
  namespace: sample-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-boot-app-2
  template:
    metadata:
      labels:
        app: spring-boot-app-2
    spec:
      containers:
        - name: spring-boot-app-2
          image: sample-k8s-deployment-docker:latest # Twój obraz aplikacji
          imagePullPolicy: IfNotPresent  # <--- BARDZO WAŻNE! najpierw szuka w klastrze k3d, dopiero potem w Publicznym rejestrze
          ports:
            - containerPort: 8080

          # 1️⃣ STARTUP PROBE: Daje czas Springowi na powolny start
          startupProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            failureThreshold: 30 # 30 prób x 2s = daje do 60 sekund na start
            periodSeconds: 2
          # 2️⃣ LIVENESS PROBE: Sprawdza regularnie, czy aplikacja nie "wisi"
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            periodSeconds: 10     # Sprawdzaj co 10 sekund
            timeoutSeconds: 3     # Oczekuj odpowiedzi max 3 sekundy
            failureThreshold: 3   # Po 3 nieudanych próbach zrestartuj Pod
          # 3️⃣ READINESS PROBE: Sprawdza, czy wysyłać ruch do tego Poda
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            periodSeconds: 5      # Sprawdzaj co 5 sekund
            timeoutSeconds: 2
            failureThreshold: 2   # Po 2 błędach odłącz od Serwisu (ruch idzie do innych podów)

          resources:
            requests:
              cpu: "250m"      # 0.25 vCPU
              memory: "256Mi"  # 256 MB RAM
            limits:
              cpu: "500m"     # 0.5 vCPU
              memory: "0.5Gi"    # 1 GB RAM
---
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-service-2
  namespace: sample-app
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: spring-boot-app-2
