dashboard-admin.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-dashboard-ingress
  namespace: kubernetes-dashboard
  annotations:
    # Mówimy Traefikowi w k3d, że backendowy serwis Dashboardu używa HTTPS:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    ingress.kubernetes.io/ssl-redirect: "false"
    traefik.ingress.kubernetes.io/service.serversscheme: https
spec:
  rules:
    - host: admin.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kubernetes-dashboard
                port:
                  number: 443
