drawio.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: drawio
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drawio
  namespace: drawio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: drawio
  template:
    metadata:
      labels:
        app: drawio
    spec:
      containers:
        - name: drawio
          image: jgraph/drawio:latest
          ports:
            - containerPort: 8080 # Draw.io wewnątrz kontenera działa na porcie 8080
---
apiVersion: v1
kind: Service
metadata:
  name: drawio-service
  namespace: drawio
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: drawio
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: drawio-ingress
  namespace: drawio
spec:
  rules:
    - host: drawio.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: drawio-service
                port:
                  number: 8080
