kubeview.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kubeview
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubeview
  namespace: kubeview
spec:
  replicas: 2
  selector:
    matchLabels:
      app: kubeview
  template:
    metadata:
      labels:
        app: kubeview
    spec:
      serviceAccountName: kubeview-sa # <--- Wskazujemy stworzoną tożsamość!
      containers:
        - name: kubeview
          image: ghcr.io/benc-uk/kubeview:latest
          ports:
            - containerPort: 8000 # Kubeview wewnątrz kontenera działa na porcie 8000
          env: # Mozna specyfikowac zmienne srodowiskowe juz na poziomnie obiektu Deployment
            - name: SPRING_PROFILES_ACTIVE
              value: "dev"
            - name: SPRING_VIRTUAL_THREADS_ENABLED
              value: "true"
          envFrom: # Mozna wstrzyknac env z ConfigMap
            - configMapRef:
                name: kubeview-config # <-- Wszystkie zmienne z ConfigMap trafiają do kontenera!
      volumes:
        - name: config-volume
          configMap:
            name: spring-application-config

---
#apiVersion: v1
#kind: Service
#metadata:
#  name: kubeview-service
#  namespace: kubeview
#spec:
#  type: NodePort
#  ports:
#    - port: 8000 # <-- Port Serwisu (punkt wejścia w klastrze)
#      targetPort: 8000 # <-- Port docelowy w Podzie
#      nodePort: 30000 # Opcjonalnie: określ port na hoście
#  selector:
#    app: kubeview
#---
apiVersion: v1
kind: Service
metadata:
  name: kubeview-service
  namespace: kubeview
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
  selector:
    app: kubeview
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubeview-ingress
  namespace: kubeview
spec:
  rules:
    - host: kubeview.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kubeview-service
                port:
                  number: 8000
